syntax = "proto3";

package room;

import "google/protobuf/timestamp.proto";

import "role.proto";

message Room {
  // UUID
  bytes id = 1;
  string name = 2;
  string password = 3;
  repeated RoomUser users = 4;
  repeated string banned_users = 5;
  role.RoleManager role_manager = 6;
  repeated RoomTrack tracks_queue = 7;
  repeated Log logs = 8;
  uint64 max_users = 9;
}

message CredentialsInput {
  string access_token = 1;
  string refresh_token = 2;
  uint32 expires_in = 3;
  google.protobuf.Timestamp created_at = 4;
}

message RoomTrack {
  string user_id = 1;
  string track_id = 2;
  string track_name = 3;
  uint32 track_duration = 4;
}

message RoomUser {
  string id = 1;
  string username = 2;
  // UUID
  bytes role_id = 3;
  bool is_connected = 4;
}

enum RoomError {
    ROOM_CREATION_FAIL = 0;
    ROOM_NOT_FOUND = 1;
    ROOM_USER_NOT_FOUND = 2;
    ROLE_NOT_FOUND = 3;
    UNAUTHORIZED = 4;
    TRACK_NOT_FOUND = 5;
    ROOM_FULL = 6;
    USER_BANNED = 7;
    USER_ID_EXISTS = 8;
    UNREACHABLE = 9;
}

message Log {
  LogType type = 1;
  string details = 2;
}

enum LogType {
  OTHER = 0;
  KICK = 1;
  BAN = 2;
  ADD_TRACK = 3;
  JOIN_ROOM = 4;
  LEAVE_ROOM = 5;
  USERNAME_CHANGE = 6;
}
